# rawblock-io

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  default.nix  flake.nix  pyproject.toml
.github/workflows/: test.yml
rawblock_io/: __init__.py  _backing_file.py  _dd.py  _direct_io.py  _io.py  _resolve.py  _resolve_darwin.py  _resolve_linux.py  _strategies.py
tests/: test_backing_file.py  test_dd.py  test_direct_io.py  test_rawblock_io.py  test_resolve.py  test_strategies.py
